# DesignPattern

./: .gitignore  BUILD  CMakeLists.txt  DesignPrinciplesAndPatterns.txt  Dockerfile  MODULE.bazel  README.md  WORKSPACE  conanfile.py  note.md
.github/workflows/: github-actions-demo.yml
Behavioral/: CMakeLists.txt
Behavioral/ChainOfResponsibility/: BUILD  CMakeLists.txt  CoRCodignExercise.cpp  CoRCodingExcerciseSimplified.cpp  cor_broker.cpp  cor_pointer.cpp
Behavioral/Command/: BUILD  CMakeLists.txt  CommandCodingExercise.cpp  CommandComposite.cpp  command_composite.cpp
Behavioral/Interpreter/: BUILD  CMakeLists.txt  IntepreterCodingExercise.cpp  Lexing.cpp  ParsingAndLexing.cpp  note.md
Behavioral/Iterator/: BUILD  CMakeLists.txt  Iterator-Coding-Exercise.cpp  Iterator-Facade.cpp  Iterator.cpp  note.md
Behavioral/Mediator/: BUILD  CMakeLists.txt  ChatRoom.hpp  LiveChat.cpp  MediatorCodingExercise.cpp  Person.cpp  Person.hpp  Soccer.cpp
Behavioral/Memento/: BUILD  CMakeLists.txt  Memento.cpp  MementoCodingExercise.cpp
Behavioral/Observer/: BUILD  CMakeLists.txt  Headers.hpp  Observable.hpp  Observer.hpp  ObserverCodingExercise.cpp  ObserverDemo.cpp  SaferObservable.hpp  note.md
Behavioral/State/: BUILD  CMakeLists.txt  Classic.cpp  Handmade.cpp  MSM.cpp  StateCodingExercise.cpp
Behavioral/Strategy/: BUILD  CMakeLists.txt  DynamicStrategy.cpp  StaticStrategy.cpp  StrategyCodingExercise.cpp
Behavioral/Template/: BUILD  CMakeLists.txt  TemplateMethod.cpp  TemplateMethodCodingExercise.cpp
Behavioral/Visitor/: BUILD  CMakeLists.txt  MultiMethods.cpp  VisitorAcyclic.cpp  VisitorCodingExercise.cpp  VisitorDouble.cpp  VisitorIntrusive.cpp  VisitorReflective.cpp  std_visit.cpp
CRTP/: BUILD  CMakeLists.txt  CuriouslyRecurringTemplatePattern.cpp
Creational/: CMakeLists.txt
Creational/Builder/: BUILD  Builder.cpp  BuilderCodingExercise.cpp  CMakeLists.txt  GroovyStyle.cpp  note.md
Creational/Factory/: CMakeLists.txt  Factory.cpp  FactoryMethod.cpp  InnerFactory.cpp
Creational/Factory/AbstractFactory/: AbstractFactory.cpp  BUILD  CoffeeFactory.h  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  TeaFactory.h
Creational/Factory/AbstractFactoryForClothes/: AbstractFactoryForClothes.cpp  BUILD  CMakeLists.txt  ClothesFactory.h  MegaClothesFactory.cpp  MegaClothesFactory.h  ShirtFactory.h  SweaterFactory.h  TopsFactory.h
Creational/Factory/AbstractFactoryForClothes/Clothes/: Clothes.h  Color.h  DressCode.h  Tops.h
Creational/Factory/AbstractFactoryForClothes/ClothesVisualizer/: BUILD  CMakeLists.txt  ClothesVisualizer.h  TopsVisualizer.cpp  TopsVisualizer.h
Creational/Factory/DesignQuestions/: PointFactory.cpp
Creational/Factory/Factory/: AirlineTicketCalculator.cpp  AirlineTicketCostCalculatorFactoryMethod.cpp  AirlineTicketCostCalculatorFactorySimplified.cpp  BUILD  CMakeLists.txt  FactoryClass.cpp  FactoryMethod.cpp  InnerFactory.cpp  RollerCoasterSimulator.cpp
Creational/Factory/Utility/: BUILD  EnumTrait.h  main.cpp
Creational/Singleton/: BUILD  BoostDi.cpp  CMakeLists.txt  DatabaseSingleton.cpp  Multiton.cpp  Singleton.h  SingletonTests.cpp  capitals.txt
Hybrid/: BUILD  Shape_OOD.cpp
Misc/: ContingencyPlanner.cpp  VerbalQuestions.txt
Misc/RobotaxiManagementSystem/: BUILD  CMakeLists.txt  Class.puml  Component.puml  Container.puml  Context.puml  README.md  RoboTaxiMangementSystem.cpp
Pimpl/: BUILD  CMakeLists.txt  MyClass.cpp  MyClass.hpp  TestMyClass.cpp
SOLID/: BUILD  CMakeLists.txt  Creational-DIP.cpp  Creational-ISP.cpp  Creational-LSP.cpp  Creational-OCP.cpp  Creational-SRP.cpp  note.md
Structual/: CMakeLists.txt
Structual/Bridge/: BUILD  CMakeLists.txt  Fake.cpp  Fake.h  Person.h
Structual/Composite/: ArrayBackedProps.cpp  BUILD  CMakeLists.txt
Structual/Decorator/: BUILD  CMakeLists.txt  DecoratorCodingExercise.cpp
Structual/Flyweight/: BUILD  CMakeLists.txt  Flyweight.cpp  FlyweightCodingExercise.cpp
Structual/Proxy/: BUILD  CMakeLists.txt  Proxy.cpp
Structural/Bridge/: Animal.h  BUILD  BridgeCodingExercise.cpp  Fake.tpp  Person.cpp  Pimpl.h  Pimpl.tpp  (+1 more)
cmake/: conan_install.cmake
std-library/: BUILD  CMakeLists.txt  SharedPtr.cpp  Shared_ptr.cpp
(+19 files in other folders)
